--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -242,10 +242,10 @@ jobs:
         with:
           repository: ${{ github.repository }}
 
-      - name: Save the CHANGELOG as a file
+      - name: Configure Git
         run: |
-          echo "${{ steps.changelog.outputs.changelog }}" > ./CHANGELOG.md
-          sed -i "1s/.*/## Changes since ${{ steps.last-release.outputs.release }}/" ./CHANGELOG.md
+          git config user.name "kingmakerbot"
+          git config user.email "kingmakerbot@users.noreply.github.com"
 
       # automatic helm repo management
       # (from https://github.com/liqotech/liqo/blob/master/.github/workflows/integration.yml)
@@ -261,13 +261,14 @@ jobs:
       - name: Package helm chart
         run: |
           # the output should be in the .cr-release-packages since cr index expects to find it there to create the helm index
-          helm package deploy/crownlabs --version "${{ needs.configure.outputs.version }}" --app-version "${{ needs.configure.outputs.version }}" --destination .cr-release-packages
+          helm dependency update deploy/crownlabs && helm package deploy/crownlabs --version "${{ needs.configure.outputs.version }}" --app-version "${{ needs.configure.outputs.version }}" --destination .cr-release-packages
 
-      - uses: ncipollo/release-action@v1
+      - name: Create release
+        uses: ncipollo/release-action@v1
         with:
           artifacts: ".cr-release-packages/*"
           generateReleaseNotes: true
-          token: ${{ secrets.CI_TOKEN }}
+          token: ${{ github.token }}
           allowUpdates: true
           tag: ${{ needs.configure.outputs.version }}
           name: Release ${{ needs.configure.outputs.version }}
