--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -261,13 +261,14 @@ jobs:
       - name: Package helm chart
         run: |
           # the output should be in the .cr-release-packages since cr index expects to find it there to create the helm index
-          helm package deploy/crownlabs --version "${{ needs.configure.outputs.version }}" --app-version "${{ needs.configure.outputs.version }}" --destination .cr-release-packages
+          helm dependency update deploy/crownlabs && helm package deploy/crownlabs --version "${{ needs.configure.outputs.version }}" --app-version "${{ needs.configure.outputs.version }}" --destination .cr-release-packages
 
-      - uses: ncipollo/release-action@v1
+      - name: Create release
+        uses: ncipollo/release-action@v1
         with:
           artifacts: ".cr-release-packages/*"
           generateReleaseNotes: true
-          token: ${{ secrets.CI_TOKEN }}
+          token: ${{ github.token }}
           allowUpdates: true
           tag: ${{ needs.configure.outputs.version }}
           name: Release ${{ needs.configure.outputs.version }}
